feat: consolidate IPA into etymology response (#33)
